fix overlap photo portfolio items

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -664,6 +664,7 @@ $port-marg-vert: $pad;
     position: relative;
     transition: box-shadow 150ms ease-out,
       transform 150ms ease-out;
+    z-index: 4;
 
     &::before {
       background: transparentize($main-color, .5);
